--- a/styles/output.css
+++ b/styles/output.css
@@ -580,6 +580,50 @@ body {
   margin-top: 0.5rem;
 }
 
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-32 {
+  margin-left: 8rem;
+}
+
+.ml-\[18rem\] {
+  margin-left: 18rem;
+}
+
+.ml-\[20rem\] {
+  margin-left: 20rem;
+}
+
+.ml-\[50rem\] {
+  margin-left: 50rem;
+}
+
+.ml-\[25rem\] {
+  margin-left: 25rem;
+}
+
+.ml-\[24rem\] {
+  margin-left: 24rem;
+}
+
+.ml-\[23rem\] {
+  margin-left: 23rem;
+}
+
+.ml-\[16rem\] {
+  margin-left: 16rem;
+}
+
+.ml-\[22\.5rem\] {
+  margin-left: 22.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -598,6 +642,10 @@ body {
 
 .w-\[20\%\] {
   width: 20%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .items-center {
@@ -635,10 +683,6 @@ body {
 
 .border {
   border-width: 1px;
-}
-
-.border-t {
-  border-top-width: 1px;
 }
 
 .border-t-4 {
@@ -691,6 +735,21 @@ body {
   padding: 1.25rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -711,35 +770,16 @@ body {
   padding-right: 1.25rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -799,4 +839,54 @@ body {
 .hover\:bg-purple-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:ml-\[20rem\] {
+    margin-left: 20rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:ml-\[23rem\] {
+    margin-left: 23rem;
+  }
+
+  .lg\:ml-\[20rem\] {
+    margin-left: 20rem;
+  }
+
+  .lg\:ml-\[19rem\] {
+    margin-left: 19rem;
+  }
+
+  .lg\:ml-\[18rem\] {
+    margin-left: 18rem;
+  }
+
+  .lg\:ml-\[17rem\] {
+    margin-left: 17rem;
+  }
+
+  .lg\:ml-\[16rem\] {
+    margin-left: 16rem;
+  }
+
+  .lg\:ml-\[25rem\] {
+    margin-left: 25rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:ml-\[\] {
+    margin-left: ;
+  }
+
+  .xl\:ml-\[18rem\] {
+    margin-left: 18rem;
+  }
+
+  .xl\:ml-\[17rem\] {
+    margin-left: 17rem;
+  }
 }
