--- a/styles/output.css
+++ b/styles/output.css
@@ -539,6 +539,10 @@ body {
   left: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -549,10 +553,6 @@ body {
 
 .right-0 {
   right: 0px;
-}
-
-.top-10 {
-  top: 2.5rem;
 }
 
 .z-50 {
@@ -572,38 +572,6 @@ body {
   margin-top: 0.75rem;
 }
 
-.ml-\[19rem\] {
-  margin-left: 19rem;
-}
-
-.ml-\[16rem\] {
-  margin-left: 16rem;
-}
-
-.ml-36 {
-  margin-left: 9rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.ml-\[5rem\] {
-  margin-left: 5rem;
-}
-
-.ml-\[15rem\] {
-  margin-left: 15rem;
-}
-
-.ml-\[17rem\] {
-  margin-left: 17rem;
-}
-
-.ml-\[10rem\] {
-  margin-left: 10rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -614,6 +582,18 @@ body {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.ml-\[10rem\] {
+  margin-left: 10rem;
+}
+
+.ml-36 {
+  margin-left: 9rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .inline-block {
@@ -640,16 +620,18 @@ body {
   width: 20%;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
 .w-\[40\%\] {
   width: 40%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .items-center {
@@ -668,10 +650,6 @@ body {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
@@ -688,12 +666,12 @@ body {
   overflow: hidden;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-t-md {
@@ -705,21 +683,22 @@ body {
   border-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-t-4 {
   border-top-width: 4px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
+.border-b-\[\#333333\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(51 51 51 / var(--tw-border-opacity));
 }
 
 .border-t-orange-500 {
   --tw-border-opacity: 1;
   border-top-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
-.border-b-\[\#s333333\] {
-  border-bottom-color: #s333333;
 }
 
 .bg-white {
@@ -730,6 +709,11 @@ body {
 .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -747,26 +731,6 @@ body {
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .p-3 {
   padding: 0.75rem;
 }
@@ -777,6 +741,31 @@ body {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-3 {
@@ -794,34 +783,8 @@ body {
   padding-right: 1.25rem;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-2 {
+.pl-2 {
   padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .pt-16 {
@@ -836,30 +799,6 @@ body {
   padding-top: 1rem;
 }
 
-.pl-\[16rem\] {
-  padding-left: 16rem;
-}
-
-.pl-\[15rem\] {
-  padding-left: 15rem;
-}
-
-.pl-\[13rem\] {
-  padding-left: 13rem;
-}
-
-.pl-\[10rem\] {
-  padding-left: 10rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -872,6 +811,11 @@ body {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-3xl {
@@ -893,15 +837,15 @@ body {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -915,6 +859,11 @@ body {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-green-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
@@ -925,106 +874,25 @@ body {
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
 @media (min-width: 768px) {
-  .md\:ml-\[15rem\] {
-    margin-left: 15rem;
-  }
-
-  .md\:ml-\[1rem\] {
-    margin-left: 1rem;
-  }
-
-  .md\:ml-\[5rem\] {
-    margin-left: 5rem;
-  }
-
-  .md\:ml-\[8rem\] {
-    margin-left: 8rem;
-  }
-
-  .md\:ml-\[9rem\] {
-    margin-left: 9rem;
-  }
-
-  .md\:ml-\[10rem\] {
-    margin-left: 10rem;
-  }
-
   .md\:ml-\[11rem\] {
     margin-left: 11rem;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-\[17rem\] {
-    margin-left: 17rem;
-  }
-
-  .lg\:ml-\[17\.5rem\] {
-    margin-left: 17.5rem;
-  }
-
-  .lg\:ml-\[15rem\] {
-    margin-left: 15rem;
-  }
-
-  .lg\:ml-\[11rem\] {
-    margin-left: 11rem;
-  }
-
-  .lg\:ml-\[13rem\] {
-    margin-left: 13rem;
-  }
-
   .lg\:ml-\[14rem\] {
     margin-left: 14rem;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:ml-\[12rem\] {
-    margin-left: 12rem;
-  }
-
-  .xl\:ml-\[16rem\] {
-    margin-left: 16rem;
-  }
-
-  .xl\:ml-\[17rem\] {
-    margin-left: 17rem;
-  }
-
-  .xl\:ml-\[18rem\] {
-    margin-left: 18rem;
-  }
-
-  .xl\:ml-\[16\.5rem\] {
-    margin-left: 16.5rem;
-  }
-
   .xl\:ml-\[16\.8rem\] {
     margin-left: 16.8rem;
   }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:ml-\[18rem\] {
-    margin-left: 18rem;
-  }
-
-  .\32xl\:ml-\[19rem\] {
-    margin-left: 19rem;
-  }
-
-  .\32xl\:ml-\[20rem\] {
-    margin-left: 20rem;
-  }
-
   .\32xl\:ml-\[21rem\] {
     margin-left: 21rem;
   }
