--- a/styles/output.css
+++ b/styles/output.css
@@ -524,6 +524,14 @@ body {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .inset-0 {
   top: 0px;
   right: 0px;
@@ -556,16 +564,26 @@ body {
   margin-bottom: 1.25rem;
 }
 
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.ml-\[19rem\] {
-  margin-left: 19rem;
+.ml-\[17rem\] {
+  margin-left: 17rem;
 }
 
-.ml-\[16rem\] {
-  margin-left: 16rem;
+.ml-\[10rem\] {
+  margin-left: 10rem;
 }
 
 .ml-36 {
@@ -574,18 +592,6 @@ body {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.ml-\[5rem\] {
-  margin-left: 5rem;
-}
-
-.ml-\[15rem\] {
-  margin-left: 15rem;
-}
-
-.ml-\[17rem\] {
-  margin-left: 17rem;
 }
 
 .flex {
@@ -608,8 +614,32 @@ body {
   width: 20%;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -632,8 +662,40 @@ body {
   gap: 0.75rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.\!rounded-t-md {
+  border-top-left-radius: 0.375rem !important;
+  border-top-right-radius: 0.375rem !important;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -661,6 +723,20 @@ body {
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
+.bg-purple-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
+}
+
+.bg-inherit {
+  background-color: inherit;
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -671,6 +747,10 @@ body {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-16 {
+  padding: 4rem;
 }
 
 .px-3 {
@@ -688,6 +768,36 @@ body {
   padding-right: 1.25rem;
 }
 
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -698,18 +808,6 @@ body {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pl-\[16rem\] {
-  padding-left: 16rem;
-}
-
-.pl-\[15rem\] {
-  padding-left: 15rem;
-}
-
-.pl-\[13rem\] {
-  padding-left: 13rem;
 }
 
 .pl-\[10rem\] {
@@ -735,6 +833,16 @@ body {
   line-height: 2.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -749,10 +857,20 @@ body {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .hover\:bg-gray-200:hover {
@@ -770,101 +888,30 @@ body {
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-purple-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 33 168 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 768px) {
-  .md\:ml-\[15rem\] {
-    margin-left: 15rem;
-  }
-
-  .md\:ml-\[1rem\] {
-    margin-left: 1rem;
-  }
-
-  .md\:ml-\[5rem\] {
-    margin-left: 5rem;
-  }
-
-  .md\:ml-\[8rem\] {
-    margin-left: 8rem;
-  }
-
-  .md\:ml-\[9rem\] {
-    margin-left: 9rem;
-  }
-
-  .md\:ml-\[10rem\] {
-    margin-left: 10rem;
-  }
-
   .md\:ml-\[11rem\] {
     margin-left: 11rem;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-\[17rem\] {
-    margin-left: 17rem;
-  }
-
-  .lg\:ml-\[17\.5rem\] {
-    margin-left: 17.5rem;
-  }
-
-  .lg\:ml-\[15rem\] {
-    margin-left: 15rem;
-  }
-
-  .lg\:ml-\[11rem\] {
-    margin-left: 11rem;
-  }
-
-  .lg\:ml-\[13rem\] {
-    margin-left: 13rem;
-  }
-
   .lg\:ml-\[14rem\] {
     margin-left: 14rem;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:ml-\[12rem\] {
-    margin-left: 12rem;
-  }
-
-  .xl\:ml-\[16rem\] {
-    margin-left: 16rem;
-  }
-
-  .xl\:ml-\[17rem\] {
-    margin-left: 17rem;
-  }
-
-  .xl\:ml-\[18rem\] {
-    margin-left: 18rem;
-  }
-
-  .xl\:ml-\[16\.5rem\] {
-    margin-left: 16.5rem;
-  }
-
   .xl\:ml-\[16\.8rem\] {
     margin-left: 16.8rem;
   }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:ml-\[18rem\] {
-    margin-left: 18rem;
-  }
-
-  .\32xl\:ml-\[19rem\] {
-    margin-left: 19rem;
-  }
-
-  .\32xl\:ml-\[20rem\] {
-    margin-left: 20rem;
-  }
-
   .\32xl\:ml-\[21rem\] {
     margin-left: 21rem;
   }
